Fix overflow issue on the portfolio

--- a/nivls_website/nivls_website/static/commons/css/20/main.less
+++ b/nivls_website/nivls_website/static/commons/css/20/main.less
@@ -966,7 +966,7 @@ ul#left-menu {
 #body {
     min-height: 100%;
     position: relative;
-    overflow: hidden;
+    .clearfix();
 }
 
 #breadcrumb-container {
